--- a/luna-example/build.gradle
+++ b/luna-example/build.gradle
@@ -10,5 +10,15 @@ repositories {
 }
 
 dependencies {
+
+    compile group: 'org.luna', name: 'luna-common', version: '1.0-SNAPSHOT'
+
+    compile group: 'org.springframework', name: 'spring-core', version: '3.0.5.RELEASE'
+    compile group: 'org.springframework', name: 'spring-beans', version: '3.0.5.RELEASE'
+    compile group: 'org.springframework', name: 'spring-context', version: '3.0.5.RELEASE'
+    compile group: 'org.springframework', name: 'spring-context-support', version: '3.0.5.RELEASE'
+    compile group: 'org.springframework', name: 'spring-webmvc', version: '3.0.5.RELEASE'
+
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
