--- a/luna-example/src/main/webapp/WEB-INF/web.xml
+++ b/luna-example/src/main/webapp/WEB-INF/web.xml
@@ -10,4 +10,32 @@
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
 
+	<!-- =================================================================== -->
+	<!--                        Spring核心部分配置                                                                          -->
+	<!-- =================================================================== -->
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath:spring-core.xml</param-value>
+	</context-param>
+
+	<!-- =================================================================== -->
+	<!--                        Spring mvc 部分配置                                                                       -->
+	<!-- =================================================================== -->
+	<servlet>
+		<servlet-name>dispatcher</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>classpath:spring-mvc.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>dispatcher</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+
 </web-app>
