--- a/luna-rpc/build.gradle
+++ b/luna-rpc/build.gradle
@@ -14,4 +14,5 @@ dependencies {
     compile 'io.netty:netty-all:4.0.34.Final'
     compile 'org.javassist:javassist:3.18.0-GA'
     compile 'com.alibaba:fastjson:1.1.22'
+    compile 'com.caucho:hessian:4.0.38'
 }
