--- a/luna-rpc/build.gradle
+++ b/luna-rpc/build.gradle
@@ -15,4 +15,5 @@ dependencies {
     compile 'org.javassist:javassist:3.18.0-GA'
     compile 'com.alibaba:fastjson:1.1.22'
     compile 'com.caucho:hessian:4.0.38'
+    testCompile group: 'junit', name: 'junit', version:'4.11'
 }
