--- a/luna-rpc/build.gradle
+++ b/luna-rpc/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     compile 'ch.qos.logback:logback-classic:1.1.2'
     compile 'io.netty:netty-all:4.0.34.Final'
     compile 'org.javassist:javassist:3.18.0-GA'
+    compile 'org.apache.commons:commons-lang3:3.1'
     compile 'com.alibaba:fastjson:1.1.22'
     compile 'com.caucho:hessian:4.0.38'
     compile 'org.apache.thrift:libthrift:0.9.3'
