--- a/luna-rpc/build.gradle
+++ b/luna-rpc/build.gradle
@@ -19,5 +19,6 @@ dependencies {
     compile 'com.alibaba:fastjson:1.1.22'
     compile 'com.caucho:hessian:4.0.38'
     compile 'org.apache.thrift:libthrift:0.9.3'
+    compile 'org.apache.curator:curator-recipes:2.5.0'
     testCompile group: 'junit', name: 'junit', version:'4.11'
 }
