--- a/luna-rpc/build.gradle
+++ b/luna-rpc/build.gradle
@@ -20,5 +20,6 @@ dependencies {
     compile 'com.caucho:hessian:4.0.38'
     compile 'org.apache.thrift:libthrift:0.9.3'
     compile 'org.apache.curator:curator-recipes:2.5.0'
+    compile 'commons-pool:commons-pool:1.5.4'
     testCompile group: 'junit', name: 'junit', version:'4.11'
 }
