--- a/luna-rpc/build.gradle
+++ b/luna-rpc/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     compile 'com.caucho:hessian:4.0.38'
     compile 'org.apache.thrift:libthrift:0.9.3'
     compile 'org.apache.curator:curator-recipes:2.5.0'
+    compile group: 'com.netflix.hystrix', name: 'hystrix-core', version: '1.5.10'
     compile 'commons-pool:commons-pool:1.5.4'
     testCompile group: 'junit', name: 'junit', version:'4.11'
 }
