--- a/luna-example/build.gradle
+++ b/luna-example/build.gradle
@@ -3,15 +3,15 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 
-sourceCompatibility = 1.7
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-
-    compile group: 'org.luna', name: 'luna-common', version: '1.0-SNAPSHOT'
+    compile project(":luna-rpc")
+    compile project(":luna-common")
 
     compile group: 'org.springframework', name: 'spring-core', version: '3.0.5.RELEASE'
     compile group: 'org.springframework', name: 'spring-beans', version: '3.0.5.RELEASE'
