--- a/luna-txmqmsg/build.gradle
+++ b/luna-txmqmsg/build.gradle
@@ -3,13 +3,14 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    compile 'io.netty:netty-all:4.1.25.Final'
     compile 'com.alibaba.rocketmq:rocketmq-client:3.2.6'
     compile 'org.apache.curator:curator-recipes:2.5.0'
 
